Bug #20220
mismatch Signature in swift formpost
Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
rgw
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
When use the feature of swift FormPost correctly according to the doc, it will also return "FormPost: Invalid Signature".
History
#1 Updated by Radoslaw Zarzynski over 5 years ago
Merged PR: https://github.com/ceph/ceph/pull/15564.
#2 Updated by Nathan Cutler over 5 years ago
- Project changed from Ceph to rgw
- Status changed from New to Resolved